--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@tanstack/react-query": "^4.29.15",
     "axios": "^1.4.0",
     "eslint-plugin-tailwindcss": "^3.12.1",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-responsive": "^9.0.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.195",
     "@types/node": "^20.3.1",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
